Main page css ex

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             </form>
         </div>
     </section>
+    <!--booking ends-->
+    
     <section class="hotels">
         <div class="container">
             <h5 class="section-head">
@@ -158,7 +160,7 @@
         </div>
     </section>
 
-<!--Booking featured hotels ends-->
+<!-- featured hotels ends-->
 
     <section class="offer">
         <div class="container">
@@ -392,7 +394,7 @@
                         <span class="bar">  </span>
                     </div>
                     <div class="input-group">
-                        <textarea class="input" cols="30"  rows="8" placeholder="Message" required> </textarea>
+                        <textarea placeholder="Message" class="input" cols="30"  rows="8"  required></textarea>
                         <span class="bar">  </span>
                     </div>
                     <button class="btn form-btn btn-purple">Send Message
@@ -402,6 +404,34 @@
             </div>
         </div>
     </section>
+
+    <!--contact us section ends-->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-content-brand">
+                    <a href="" class="logo">
+                        <img src="./images/logo.png" alt="" class="logo-image">
+                    </a>
+                    <div class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus hic minima, nihil ipsum suscipit optio mollitia blanditiis numquam provident laborum consequuntur sed debitis dolorem, a eum quibusdam. Consequatur, nobis amet.
+                    </div>
+                </div>
+                <div class="social-media-wrap">
+                    <h4 class="footer-heading">Follow Us</h4>
+                    <div class="social-media">
+                        <a href="" class="sm-link"> <i class="fab fa-twitter"></i> </a>
+                        <a href="" class="sm-link"> <i class="fab fa-facebook"></i> </a>
+                        <a href="" class="sm-link"> <i class="fab fa-instagram"></i> </a>
+                        <a href="" class="sm-link"> <i class="fab fa-pinterest"></i> </a>
+                        <a href="" class="sm-link"> <i class="fab fa-tripadvisor"></i> </a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     </main>
     <script src="main.js"></script>
